--- a/OneStopRentals.WebMVC/Views/Home/Index.cshtml
+++ b/OneStopRentals.WebMVC/Views/Home/Index.cshtml
@@ -2,13 +2,37 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+
+<div class="jumbotron jumbotron-fluid " >
+    <div class="container">
+        <h1 class="display-4">One Stop Rentals</h1>
+        <p class="lead">A property management software company</p>
+    </div>
 </div>
 
+<hr/>
+
+
+
+
 <div class="row">
+    <div class="col-md-4">
+        <h2>Maintenance</h2>
+        <p>Service requests, work orders and vendor management tools that keep you updated</p>
+        <p><a class="btn btn-success" href="https://www.pilera.com/">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Help Desk</h2>
+        <p>Community specific support and customer relationship software</p>
+        <p><a class="btn btn-primary" href="https://www.pilera.com/">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Resident Portal</h2>
+        <p>A complete resident experience: balance, ledger, online payments, community documents, and more</p>
+        <p><a class="btn btn-success" href="https://www.pilera.com/">Learn more &raquo;</a></p>
+    </div>
+</div>
+<div class="row"
     <div class="col-md-4">
         <div id="form" class="container">
             <h2>Contact</h2>
@@ -27,28 +51,29 @@
             </form>
         </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+
 </div>
 
+
 <style>
-    #contact-title {
-    padding-top: 50px;
-}
 
-#form {
-    font-size: 20px;
-}
+    .jumbotron h1{
+        color:black;
+        
+    }
 
-input {
+    .jumbotron{
+    background-color:transparent;
+   
+    }
+
+    textarea {
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+    width: 100%
+}
+    input {
     padding: 5px;
     margin-bottom: 20px;
     margin-right: 20px;
@@ -57,22 +82,7 @@ input {
     width: 100%;
 }
 
-input:focus {
-    outline: none;
-}
-
-textarea {
-    padding: 5px;
-    border: 1px solid black;
-    border-radius: 5px;
-    width: 100%
-}
-
-textarea:focus {
-    outline: none;
-}
-
-button {
+    button {
     border-radius: 5px;
     padding: 5px 10px;
     margin-top: 10px;
@@ -81,3 +91,4 @@ button {
     transition: .3s;
 }
 </style>
+
