--- a/OneStopRentals.WebMVC/Views/Maintenance/Index.cshtml
+++ b/OneStopRentals.WebMVC/Views/Maintenance/Index.cshtml
@@ -4,13 +4,13 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2 style="color:forestgreen;">Maintenance Tickets</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
-    <tr>
+    <tr style="background-color:forestgreen; color:black">
         <th>
             @Html.DisplayNameFor(model => model.MaintenanceID)
         </th>
@@ -33,7 +33,8 @@
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
+       
+    <tr style="color:black; background-color:floralwhite">
         <td>
             @Html.DisplayFor(modelItem => item.MaintenanceID)
         </td>
@@ -61,3 +62,10 @@
 }
 
 </table>
+
+
+<style>
+
+
+
+</style>
